<resources>
    <string name="app_name">Tani Koszyk</string>
    <string name="product_search">Szukaj produktów</string>
    <string name="home">Główna</string>
    <string name="cart">Koszyk</string>
    <string name="profile">Profil</string>
    <string name="empty">W krótce!</string>
    <string name="title_products">Produkty</string>
    <string name="title_cart">Koszyk</string>
    <string name="sort">Sortuj</string>
    <string name="filter">Filter</string>
    <string name="auchan">Auchan</string>
    <string name="biedronka">Biedronka</string>
    <string name="kaufland">Kaufland</string>
    <string name="tesco">Tesco</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="sign_out">Wyloguj się</string>
    <string name="add_to_cart">Dodaj do koszyka</string>
    <string name="remove_from_cart">Usuń z koszyka</string>
</resources>
